fixed the overflow issue

--- a/cchulo.App.PortfolioBlog/ClientApp/src/app/app.component.scss
+++ b/cchulo.App.PortfolioBlog/ClientApp/src/app/app.component.scss
@@ -11,6 +11,7 @@ $toolbar-padding-bottom: 10px;
     width: 100%;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 
     .inner-main {
         display: flex;
